--- a/test/TestDemo.html
+++ b/test/TestDemo.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>拖动排序--测试</title>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 </head>
 <body>
 	<div class="moveDiv"></div>
 	<script type="text/javascript" src="../dist/Ling.js"></script>
 	<script>
-		var ss = new Ling(".moveDiv",{});
+		var ss = new Ling(".moveDiv",{
+			
+		});
 	</script>
 </body>
 </html>
