--- a/test/TestDemo.html
+++ b/test/TestDemo.html
@@ -10,7 +10,15 @@
 	<script type="text/javascript" src="../dist/Ling.js"></script>
 	<script>
 		var ss = new Ling(".moveDiv",{
-			
+			text: [{
+				name: "世界"
+			},{
+				name: "中国"
+			},{
+				name: "美国"
+			},{
+				name: "俄罗斯"
+			}]
 		});
 	</script>
 </body>
