--- a/test/TestDemo.html
+++ b/test/TestDemo.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<div class="moveDiv"></div>
-	<script type="text/javascript" src="../dist/Ling.js"></script>
+	<script type="text/javascript" src="../dist/LinkdRock.js"></script>
 	<script>
-		var ss = new Ling(".moveDiv",{
+		var ss = new LinkdRock(".moveDiv",{
 			text: [{
 				name: "世界"
 			},{
